--- a/html/delice-des-sens.html
+++ b/html/delice-des-sens.html
@@ -12,125 +12,125 @@
     <div class="loader">
         <div class="loader__spinner"></div>
     </div>
-    <div id="corps">
-        <div id="tete">
-            <a href="../index.html">
-                <i class="fas fa-arrow-left fleche"></i>
-            </a>
-            <h1>
-                <img src="../assets/images/logo/ohmyfood.png" alt="Oh My Food">
-            </h1>
-        </div>
-        <div id="image-resto">
-            <img src="../assets/images/restaurants/delice-des-sens-m.jpg" alt="La palette du goût">
-        </div>
-        <div id="menu-resto">
-            <div class="nom-resto">
-                <h2>Le délice des sens</h2>
-                <i class="far fa-heart coeur"></i>
-            </div>
-            <div class="entrees-resto">
-                <p class="titre">ENTRÉES</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Tartare de thon</p>
-                    <p class="description-plat">Assaisonné au yzu</p>
-                    <p class="prix-plat">25€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Bouchée de hommard croustillant</p>
-                    <p class="description-plat">Et sa farandole de petits légumes</p>
-                    <p class="prix-plat">35€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Velouté de cèpes</p>
-                    <p class="description-plat">Aux truffes</p>
-                    <p class="prix-plat">20€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="principal-resto">
-                <p class="titre">PLATS</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Poulet rôti aux herbes de provence</p>
-                    <p class="description-plat">Et sa crème de truffes</p>
-                    <p class="prix-plat">40€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Langouste rôtie</p>
-                    <p class="description-plat">Et ses légumes de saison</p>
-                    <p class="prix-plat">35€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Côte de boeuf angus</p>
-                    <p class="description-plat">Et sa purée de panais</p>
-                    <p class="prix-plat">44€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert-resto">
-                <p class="titre">DESSERTS</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Farandole de desserts</p>
-                    <p class="description-plat">Du chef</p>
-                    <p class="prix-plat">18€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Crème brulée</p>
-                    <p class="description-plat">Revisitée</p>
-                    <p class="prix-plat">22€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Tiramisu</p>
-                    <p class="description-plat">A la noisette</p>
-                    <p class="prix-plat">23€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="cadre-bouton">
-                <input type="submit" value="Commander" id="bouton" />
-            </div>
-        </div>
-        <div id="footer">
-            <div class="img-footer">
-                <img src="../assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
-            </div>
-            <a class="proposer" href="">
-                <i class="fas fa-utensils icone-footer"></i>
-                <span class="p-restaurant">Proposer un restaurant</span>
-            </a>
-            <a class="partenaire" href="">
-                <i class="fas fa-hands-helping"></i>
-                <span class="d-partenaire">Devenir partenaire</span>
-            </a>
-            <a class="legale" href="">Mention légales</a>
-            <a class="contact" href="mailto:contact-omf-paris@omf.com">Contact</a>
-        </div>
+<div id="corps">
+    <header id="tete">
+        <a href="../index.html">
+            <i class="fas fa-arrow-left fleche"></i>
+        </a>
+        <h1>
+            <img src="../assets/images/logo/ohmyfood.png" alt="Oh My Food">
+        </h1>
+    </header>
+    <div id="image-resto">
+        <img src="../assets/images/restaurants/delice-des-sens-m.jpg" alt="La palette du goût">
     </div>
+    <section id="menu-resto">
+        <div class="nom-resto">
+            <h2>Le délice des sens</h2>
+            <i class="far fa-heart coeur"></i>
+        </div>
+        <div class="entrees-resto">
+            <p class="titre">ENTRÉES</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Tartare de thon</h3>
+                <p class="description-plat">Assaisonné au yzu</p>
+                <p class="prix-plat">25€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Bouchée de hommard croustillant</h3>
+                <p class="description-plat">Et sa farandole de petits légumes</p>
+                <p class="prix-plat">35€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Velouté de cèpes</h3>
+                <p class="description-plat">Aux truffes</p>
+                <p class="prix-plat">20€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="principal-resto">
+            <p class="titre">PLATS</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Poulet rôti aux herbes de provence</h3>
+                <p class="description-plat">Et sa crème de truffes</p>
+                <p class="prix-plat">40€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Langouste rôtie</h3>
+                <p class="description-plat">Et ses légumes de saison</p>
+                <p class="prix-plat">35€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Côte de boeuf angus</h3>
+                <p class="description-plat">Et sa purée de panais</p>
+                <p class="prix-plat">44€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="dessert-resto">
+            <p class="titre">DESSERTS</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Farandole de desserts</h3>
+                <p class="description-plat">Du chef</p>
+                <p class="prix-plat">18€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Crème brulée</h3>
+                <p class="description-plat">Revisitée</p>
+                <p class="prix-plat">22€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Tiramisu</h3>
+                <p class="description-plat">A la noisette</p>
+                <p class="prix-plat">23€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="cadre-bouton">
+            <input type="submit" value="Commander" id="bouton" />
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="img-footer">
+            <img src="../assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
+        </div>
+        <a class="proposer" href="">
+            <i class="fas fa-utensils icone-footer"></i>
+            <span class="p-restaurant">Proposer un restaurant</span>
+        </a>
+        <a class="partenaire" href="">
+            <i class="fas fa-hands-helping"></i>
+            <span class="d-partenaire">Devenir partenaire</span>
+        </a>
+        <a class="legale" href="">Mention légales</a>
+        <a class="contact" href="mailto:contact-omf-paris@omf.com">Contact</a>
+    </footer>
+</div>
 </body>
