--- a/html/la-francaise.html
+++ b/html/la-francaise.html
@@ -12,125 +12,125 @@
     <div class="loader">
         <div class="loader__spinner"></div>
     </div>
-    <div id="corps">
-        <div id="tete">
-            <a href="../index.html">
-                <i class="fas fa-arrow-left fleche"></i>
-            </a>
-            <h1>
-                <img src="../assets/images/logo/ohmyfood.png" alt="Oh My Food">
-            </h1>
-        </div>
-        <div id="image-resto">
-            <img src="../assets/images/restaurants/la-francaise-m.jpg" alt="La palette du goût">
-        </div>
-        <div id="menu-resto">
-            <div class="nom-resto">
-                <h2>À la française</h2>
-                <i class="far fa-heart coeur"></i>
-            </div>
-            <div class="entrees-resto">
-                <p class="titre">ENTRÉES</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Tartare de poulpe acidulé</p>
-                    <p class="description-plat">Aux zests d'orange</p>
-                    <p class="prix-plat">25€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Velouté de légules d'antan</p>
-                    <p class="description-plat">Carotte, panais, topinambour</p>
-                    <p class="prix-plat">35€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Soupe à l'oignon</p>
-                    <p class="description-plat">Revisté</p>
-                    <p class="prix-plat">20€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="principal-resto">
-                <p class="titre">PLATS</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Coquilles Saint-Jacques</p>
-                    <p class="description-plat">Accompagné d'une purée de panais</p>
-                    <p class="prix-plat">40€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Magret de canard</p>
-                    <p class="description-plat">Et parmentier de pommes de terre</p>
-                    <p class="prix-plat">35€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Pigeonneau d'Ille-et-Vilaine</p>
-                    <p class="description-plat">Sur son lit de gnocchis aux légumes</p>
-                    <p class="prix-plat">44€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert-resto">
-                <p class="titre">DESSERTS</p>
-                <p class="ligne"></p>
-                <div class="plats">
-                    <p class="nom-plat">Pétales de violettes glacés</p>
-                    <p class="description-plat">Et purée de noisettes</p>
-                    <p class="prix-plat">18€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Fondant au chocolot</p>
-                    <p class="description-plat">Revisté</p>
-                    <p class="prix-plat">22€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="plats">
-                    <p class="nom-plat">Millefeuille croustillant</p>
-                    <p class="description-plat">Myrtilles et pâte d'amande</p>
-                    <p class="prix-plat">23€</p>
-                    <div class="confirmation">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="cadre-bouton">
-                <input type="submit" value="Commander" id="bouton" />
-            </div>
-        </div>
-        <div id="footer">
-            <div class="img-footer">
-                <img src="../assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
-            </div>
-            <a class="proposer" href="">
-                <i class="fas fa-utensils icone-footer"></i>
-                <span class="p-restaurant">Proposer un restaurant</span>
-            </a>
-            <a class="partenaire" href="">
-                <i class="fas fa-hands-helping"></i>
-                <span class="d-partenaire">Devenir partenaire</span>
-            </a>
-            <a class="legale" href="">Mention légales</a>
-            <a class="contact" href="mailto:contact-omf-paris@omf.com">Contact</a>
-        </div>
+<div id="corps">
+    <header id="tete">
+        <a href="../index.html">
+            <i class="fas fa-arrow-left fleche"></i>
+        </a>
+        <h1>
+            <img src="../assets/images/logo/ohmyfood.png" alt="Oh My Food">
+        </h1>
+    </header>
+    <div id="image-resto">
+        <img src="../assets/images/restaurants/la-francaise-m.jpg" alt="La palette du goût">
     </div>
+    <section id="menu-resto">
+        <div class="nom-resto">
+            <h2>À la française</h2>
+            <i class="far fa-heart coeur"></i>
+        </div>
+        <div class="entrees-resto">
+            <p class="titre">ENTRÉES</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Tartare de poulpe acidulé</h3>
+                <p class="description-plat">Aux zests d'orange</p>
+                <p class="prix-plat">25€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Velouté de légules d'antan</h3>
+                <p class="description-plat">Carotte, panais, topinambour</p>
+                <p class="prix-plat">35€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Soupe à l'oignon</h3>
+                <p class="description-plat">Revisté</p>
+                <p class="prix-plat">20€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="principal-resto">
+            <p class="titre">PLATS</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Coquilles Saint-Jacques</h3>
+                <p class="description-plat">Accompagné d'une purée de panais</p>
+                <p class="prix-plat">40€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Magret de canard</h3>
+                <p class="description-plat">Et parmentier de pommes de terre</p>
+                <p class="prix-plat">35€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Pigeonneau d'Ille-et-Vilaine</h3>
+                <p class="description-plat">Sur son lit de gnocchis aux légumes</p>
+                <p class="prix-plat">44€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="dessert-resto">
+            <p class="titre">DESSERTS</p>
+            <p class="ligne"></p>
+            <article class="plats">
+                <h3 class="nom-plat">Pétales de violettes glacés</h3>
+                <p class="description-plat">Et purée de noisettes</p>
+                <p class="prix-plat">18€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Fondant au chocolot</h3>
+                <p class="description-plat">Revisté</p>
+                <p class="prix-plat">22€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="plats">
+                <h3 class="nom-plat">Millefeuille croustillant</h3>
+                <p class="description-plat">Myrtilles et pâte d'amande</p>
+                <p class="prix-plat">23€</p>
+                <div class="confirmation">
+                    <i class="far fa-check-circle"></i>
+                </div>
+            </article>
+        </div>
+        <div class="cadre-bouton">
+            <input type="submit" value="Commander" id="bouton" />
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="img-footer">
+            <img src="../assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
+        </div>
+        <a class="proposer" href="">
+            <i class="fas fa-utensils icone-footer"></i>
+            <span class="p-restaurant">Proposer un restaurant</span>
+        </a>
+        <a class="partenaire" href="">
+            <i class="fas fa-hands-helping"></i>
+            <span class="d-partenaire">Devenir partenaire</span>
+        </a>
+        <a class="legale" href="">Mention légales</a>
+        <a class="contact" href="mailto:contact-omf-paris@omf.com">Contact</a>
+    </footer>
+</div>
 </body>
