--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <form method="post" action="traitement.php">
         <fieldset>
             <div id="search-block">
-                <label for="search"><i class="fas fa-map-marker-alt icone"></i></label> <input type="search" name="search-bar" id="search" placeholder="Paris, Belleville" maxlength="20" size="20" autofocus required />
+                <label for="search">
+                    <i class="fas fa-map-marker-alt icone"></i>
+                </label> 
+                <input type="search" name="search-bar" id="search" placeholder="Paris, Belleville" maxlength="20" size="20" autofocus required />
                 <div class="reserve">
                     <p class="titre-reserve">Réservez le menu qui vous convient</p>
                     <p class="reserve-resume">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
