--- a/html/la-francaise.html
+++ b/html/la-francaise.html
@@ -17,9 +17,7 @@
         <a href="../index.html">
             <i class="fas fa-arrow-left fleche"></i>
         </a>
-        <h1>
-            <img src="../assets/images/logo/ohmyfood.png" alt="Oh My Food">
-        </h1>
+        <h1>ohmyfood</h1>
     </header>
     <div id="image-resto">
         <img src="../assets/images/restaurants/la-francaise-m.jpg" alt="La palette du goût">
@@ -118,9 +116,7 @@
         </div>
     </section>
     <footer id="footer">
-        <div class="img-footer">
-            <img src="../assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
-        </div>
+        <h4>ohmyfood</h4>
         <a class="proposer" href="">
             <i class="fas fa-utensils icone-footer"></i>
             <span class="p-restaurant">Proposer un restaurant</span>
