--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     </div>
 <div id="corps">
     <header>
-        <h1>
-            <img src="assets/images/logo/ohmyfood.png" alt="Oh My Food">
-        </h1>
+        <h1>ohmyfood</h1>
     </header>
     <form method="post" action="traitement.php">
         <fieldset>
@@ -91,9 +89,7 @@
         </article>
     </section>
     <footer id="footer">
-        <div class="img-footer">
-            <img src="./assets/images/logo/ohmyfood2wh.png" alt="OhMyFood">
-        </div>
+        <h4>ohmyfood</h4>
         <a class="proposer" href="">
             <i class="fas fa-utensils icone-footer"></i>
             <span class="p-restaurant">Proposer un restaurant</span>
