--- a/html/palette-du-gout.html
+++ b/html/palette-du-gout.html
@@ -53,7 +53,7 @@
                 <div class="confirmation">
                     <i class="far fa-check-circle"></i>
                 </div>
-            </article>>
+            </article>
         </div>
         <div class="principal-resto">
             <p class="titre">PLATS</p>
